{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 50,
  "lineage": "9c7fc8e9-ea0f-dd3b-ad08-592db9a173c2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b69ea66ff7391e80",
            "arn": "arn:aws:ec2:us-east-1:463065390119:instance/i-0453c5f0940d78a9a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0453c5f0940d78a9a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-072eef359c0c69c54",
            "private_dns": "ip-172-31-39-24.ec2.internal",
            "private_ip": "172.31.39.24",
            "public_dns": "ec2-3-81-92-216.compute-1.amazonaws.com",
            "public_ip": "3.81.92.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-081f025211f89c1d7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-cbcef697",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-75638e26"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:463065390119:security-group/sg-0632cfe7999201e80",
            "description": "SG web 80 e 443",
            "egress": [],
            "id": "sg-0632cfe7999201e80",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "189.54.144.192/32"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web",
            "name_prefix": null,
            "owner_id": "463065390119",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0a262bd47c8b720fd"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "in_ping",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-1252073402",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-0632cfe7999201e80",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privada",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:463065390119:subnet/subnet-0049343ef8f315491",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0049343ef8f315491",
            "map_public_ip_on_launch": false,
            "owner_id": "463065390119",
            "tags": {
              "Name": "Main"
            },
            "vpc_id": "vpc-0a262bd47c8b720fd"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publica",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:463065390119:subnet/subnet-000887c7baec08a4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-000887c7baec08a4e",
            "map_public_ip_on_launch": false,
            "owner_id": "463065390119",
            "tags": {
              "Name": "Main"
            },
            "vpc_id": "vpc-0a262bd47c8b720fd"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:463065390119:vpc/vpc-0a262bd47c8b720fd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-09bd437713562b72d",
            "default_route_table_id": "rtb-0e981557e5d83a2fa",
            "default_security_group_id": "sg-0263f98ebca6fef7b",
            "dhcp_options_id": "dopt-faa55180",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a262bd47c8b720fd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e981557e5d83a2fa",
            "owner_id": "463065390119",
            "tags": {
              "Name": "Main"
            }
          }
        }
      ]
    }
  ]
}